# reviewer

./: Cargo.toml  LICENSE  README.md  TODO.md  build.rs
.claude/skills/code-review/: SKILL.md
.codex/rules/: reviewer.rules
.codex/skills/code-review/: SKILL.md
.github/scripts/: update_homebrew_formula.py
.github/workflows/: release.yml
scripts/: release.sh
src/: agent.rs  config.rs  daemon.rs  diff.rs  filters.rs  gh.rs  harness.rs  main.rs  repos.rs  terminal.rs  tui.rs
