[package]
name = "reviewer"
version = "0.1.0"
edition = "2021"
description = "TUI for reviewing GitHub PRs across multiple repositories with Claude Code integration"
license = "MIT"
repository = "https://github.com/daulet/reviewer"
authors = ["daulet"]
keywords = ["github", "pull-request", "code-review", "tui", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
similar = "2"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
ansi-to-tui = "7"
